<resources>
    <string name="app_name">FuelKotlinLab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ingresar_nota">Ingresar Nota</string>
    <string name="promedio_notas">Promedio de Notas</string>
    <string name="numero_texto">Número a texto</string>
    <string name="ingresa_digito">Ingresa un dígito entre 0 y 9</string>
    <string name="convertir">Convertir</string>
    <string name="ingresa_carnet_info">Ingrese el carnet del alumno</string>
    <string name="obtener_promedio">Obtener promedio</string>
    <string name="no_alumno">No se encontró alumno con ese carnet</string>
    <string name="guardar">Guardar</string>
    <string name="carnet">Carnet</string>
    <string name="cod_materia">Cód. Materia</string>
    <string name="ciclo">Ciclo</string>
    <string name="nota">Nota</string>
    <string name="ws_exito">Web Service ejecutado con éxito</string>
    <string name="error">Error</string>
    <string name="ws_error">Error al ejecutar web service</string>
    <string name="numero_rango">Número en rango</string>
    <string name="ingresar_partida">Ingresar partida</string>
    <string name="promedio_participantes">Promedio participantes</string>
    <string name="juego">Juego</string>
    <string name="participantes">Participantes</string>
    <string name="ganador">Ganador</string>
    <string name="ingresa_id_juego">Ingresa el id del juego</string>
    <string name="no_juego">No se encontró un juego con este id.</string>
    <string name="ingresa_numero_rango">Ingrese un número para calcular pares:</string>
    <string name="ws_exito_insert_partida">¡Partida registrada con éxito!</string>
</resources>