<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_num_rango">
    <fragment
        android:id="@+id/nav_num_rango"
        android:name="com.example.fuelkotlinlab.ui.NumeroRangoFragment"
        android:label="@string/numero_rango"
        tools:layout="@layout/fragment_numero_rango" />
    <fragment
        android:id="@+id/nav_ingresar_partida"
        android:name="com.example.fuelkotlinlab.ui.IngresarPartidaFragment"
        android:label="@string/ingresar_partida"
        tools:layout="@layout/fragment_ingresar_partida" />
    <fragment
        android:id="@+id/nav_promedio_participantes"
        android:name="com.example.fuelkotlinlab.ui.PromedioParticipantesFragment"
        android:label="@string/promedio_participantes"
        tools:layout="@layout/fragment_promedio_participantes" />
</navigation>